# medintell-python

./: LICENSE  README.md  pyproject.toml
medintell/: __init__.py  client.py
tests/: test_smoke.py
